better result add nav

--- a/app/static/search.html
+++ b/app/static/search.html
@@ -52,81 +52,83 @@
             <div class="option"><a class="selected" href="/static/dead_link.html">All Sources</a></div>
         </div>
       </div>
-      <ol class="searchResults widgetTheme">
-        <ul class="result">
-            <div class="resultSource" ><button ><img class="source GBIF" src="/static/maps/search/gbif.png"></button></div>
-            <div class="resultType" ><button ><img class="type Points" src="/static/maps/search/placemark.png"></button></div>
-            <div class="resultName">
-                <div class="resultNomial" >Puma concolor </div>
-                <div class="resultAuthor">(author)</div>
-            </div>
-            <div class="resultLink"><a href="/static/dead_link.html">more info</a></div>
-            <div class="buttonContainer"> 
-                <input type="checkbox" class="checkbox" /> 
-                <span class="customCheck"></span> 
-            </div> 
-        </ul>
-        <div class="break"></div>
-        <ul class="result">
-            <div class="resultSource" ><button ><img class="source MOL" src="/static/maps/search/mol.png"></button></div>
-            <div class="resultType" ><button ><img class="type Range" src="/static/maps/search/range.png"></button></div>
-            <div class="resultName">
-                <div class="resultNomial" >Puma concolor </div>
-                <div class="resultAuthor">(author)</div>
-            </div>
-            <div class="resultLink"><a href="/static/dead_link.html">more info</a></div>
-            <div class="buttonContainer"> 
-                <input type="checkbox" class="checkbox" /> 
-                <span class="customCheck"></span> 
-            </div> 
-        </ul>
-        <div class="break"></div>
-        <ul class="result">
-            <div class="resultSource" ><button ><img class="source GBIF" src="/static/maps/search/gbif.png"></button></div>
-            <div class="resultType" ><button ><img class="type Points" src="/static/maps/search/placemark.png"></button></div>
-            <div class="resultName">
-                <div class="resultNomial" >Puma yagouaroundi </div>
-                <div class="resultAuthor">(author)</div>
-            </div>
-            <div class="resultLink"><a href="/static/dead_link.html">more info</a></div>
-            <div class="buttonContainer"> 
-                <input type="checkbox" class="checkbox" /> 
-                <span class="customCheck"></span> 
-            </div> 
-        </ul>
-        <div class="break"></div>
-        <ul class="result">
-            <div class="resultSource" ><button ><img class="source MOL" src="/static/maps/search/mol.png"></button></div>
-            <div class="resultType" ><button ><img class="type Range" src="/static/maps/search/range.png"></button></div>
-            <div class="resultName">
-                <div class="resultNomial" >Puma yagouaroundi </div>
-                <div class="resultAuthor">(author)</div>
-            </div>
-            <div class="resultLink"><a href="/static/dead_link.html">more info</a></div>
-            <div class="buttonContainer"> 
-                <input type="checkbox" class="checkbox" /> 
-                <span class="customCheck"></span> 
-            </div> 
-        </ul>
-        <div class="break"></div>
-        <ul class="result">
-            <div class="resultSource" ><button ><img class="source GBIF" src="/static/maps/search/gbif.png"></button></div>
-            <div class="resultType" ><button ><img class="type Points" src="/static/maps/search/placemark.png"></button></div>
-            <div class="resultName">
-                <div class="resultNomial" >Smilisca puma </div>
-                <div class="resultAuthor">(author)</div>
-            </div>
-            <div class="resultLink"><a href="/static/dead_link.html">more info</a></div>
-            <div class="buttonContainer"> 
-                <input type="checkbox" class="checkbox" /> 
-                <span class="customCheck"></span> 
-            </div> 
-        </ul>
-      </ol>
-        <div class="navigation">
-          <button class="addAll">Add</button>
-          <button class="nextPage">Next Page</button>
-        </div>
+      <div class="searchResults widgetTheme">
+        <div class="resultHeader">Results</div>
+        <ol class="resultList">
+            <ul class="result">
+                <div class="resultSource" ><button ><img class="source GBIF" src="/static/maps/search/gbif.png"></button></div>
+                <div class="resultType" ><button ><img class="type Points" src="/static/maps/search/placemark.png"></button></div>
+                <div class="resultName">
+                    <div class="resultNomial" >Puma concolor </div>
+                    <div class="resultAuthor">(author)</div>
+                </div>
+                <div class="resultLink"><a href="/static/dead_link.html">more info</a></div>
+                <div class="buttonContainer"> 
+                    <input type="checkbox" class="checkbox" /> 
+                    <span class="customCheck"></span> 
+                </div> 
+            </ul>
+            <div class="break"></div>
+            <ul class="result">
+                <div class="resultSource" ><button ><img class="source MOL" src="/static/maps/search/mol.png"></button></div>
+                <div class="resultType" ><button ><img class="type Range" src="/static/maps/search/range.png"></button></div>
+                <div class="resultName">
+                    <div class="resultNomial" >Puma concolor </div>
+                    <div class="resultAuthor">(author)</div>
+                </div>
+                <div class="resultLink"><a href="/static/dead_link.html">more info</a></div>
+                <div class="buttonContainer"> 
+                    <input type="checkbox" class="checkbox" /> 
+                    <span class="customCheck"></span> 
+                </div> 
+            </ul>
+            <div class="break"></div>
+            <ul class="result">
+                <div class="resultSource" ><button ><img class="source GBIF" src="/static/maps/search/gbif.png"></button></div>
+                <div class="resultType" ><button ><img class="type Points" src="/static/maps/search/placemark.png"></button></div>
+                <div class="resultName">
+                    <div class="resultNomial" >Puma yagouaroundi </div>
+                    <div class="resultAuthor">(author)</div>
+                </div>
+                <div class="resultLink"><a href="/static/dead_link.html">more info</a></div>
+                <div class="buttonContainer"> 
+                    <input type="checkbox" class="checkbox" /> 
+                    <span class="customCheck"></span> 
+                </div> 
+            </ul>
+            <div class="break"></div>
+            <ul class="result">
+                <div class="resultSource" ><button ><img class="source MOL" src="/static/maps/search/mol.png"></button></div>
+                <div class="resultType" ><button ><img class="type Range" src="/static/maps/search/range.png"></button></div>
+                <div class="resultName">
+                    <div class="resultNomial" >Puma yagouaroundi </div>
+                    <div class="resultAuthor">(author)</div>
+                </div>
+                <div class="resultLink"><a href="/static/dead_link.html">more info</a></div>
+                <div class="buttonContainer"> 
+                    <input type="checkbox" class="checkbox" /> 
+                    <span class="customCheck"></span> 
+                </div> 
+            </ul>
+            <div class="break"></div>
+            <ul class="result">
+                <div class="resultSource" ><button ><img class="source GBIF" src="/static/maps/search/gbif.png"></button></div>
+                <div class="resultType" ><button ><img class="type Points" src="/static/maps/search/placemark.png"></button></div>
+                <div class="resultName">
+                    <div class="resultNomial" >Smilisca puma </div>
+                    <div class="resultAuthor">(author)</div>
+                </div>
+                <div class="resultLink"><a href="/static/dead_link.html">more info</a></div>
+                <div class="buttonContainer"> 
+                    <input type="checkbox" class="checkbox" /> 
+                    <span class="customCheck"></span> 
+                </div> 
+            </ul>
+          </ol>
+          <div class="pageNavigation">
+              <button class="addAll">Map Selected Layers</button>
+          </div>
+      </div>
     </div>
     
     
