layer toggle is back

--- a/app/static/layers.html
+++ b/app/static/layers.html
@@ -17,7 +17,7 @@
   <div class="mol-Map-RightControl">
     <div class="TOP">
         <div class="mol-LayerControl-Menu ">
-            <div class="label">Layers</div>
+            <div class="label">Layers <img class="layersToggle" src="/static/maps/layers/expand.png"></div>
             <div class="widgetTheme delete button">Delete</div>
             <div class="widgetTheme add button">Add</div>
         </div>
