--- a/app/static/metadata.html
+++ b/app/static/metadata.html
@@ -7,7 +7,7 @@
   <body >
     <div id="metadata">
         <div class="mol-Metadata">    
-                <div class="top-bar">       
+            <div class="top-bar">        
                 <a href="#map">Back to Map</a>        
                 <div class="details-menu">            
                     <div class="view-option selected">basic</div>            
@@ -17,83 +17,102 @@
             </div>    
             <div class="object-menu">        
                 <div class="title">Mapped data</div>        
-                <ul class="collection-list">        
-                    <li id="container-WWF_Ecoregion">
-                        <div id="WWF_Ecoregion" class="collection">WWF Ecoregion</div>
-                        <ul class="item-list">
-                            <li id="container-ecoregion/wwf/AA0101">
-                                <div id="ecoregion/wwf/AA0101" class="item">Admiralty Islands lowland rain forests</div>
-                            </li>
-                            <li id="container-ecoregion/wwf/AA0102">
-                                <div id="ecoregion/wwf/AA0102" class="item selected">Banda Sea Islands moist deciduous forests</div>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>     
-            </div>    
-            <div class="object-viewer">        
-                <div class="details-window">            
-                    <div class="title">Data:</div>            
-                    <div class="data">            
-                        <div class="meta-object" id="WWF_Ecoregion"></div>
-                        <div class="meta-object" id="ecoregion/wwf/AA0101"></div>
-                        <div class="meta-object selected" id="ecoregion/wwf/AA0102">
-                                <div class="object-title">
-                                    <span class="collection-path">WWF</span>
-                                    <span class="arrow"> -- </span>
-                                    <span class="type-path">Ecoregion</span>
-                                    <h2 class="name">Banda Sea Islands moist deciduous forests</h2>
+                    <ul class="collection-list">        
+                        <li id="container-GBIF_Points">
+                            <div id="GBIF_Points" class="collection">GBIF Points</div>
+                            <ul class="item-list">
+                                <li id="container-points/gbif/13191720">   
+                                    <div id="points/gbif/13191720" class="item selected">Puma</div>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>    
+                </div>    
+                <div class="object-viewer">        
+                    <div class="details-window">           
+                        <div class="title">Data:</div>            
+                            <div class="data">            
+                                <div class="meta-object" id="GBIF_Points">   
+                                    <div class="object-title">       
+                                        <span class="src-path"></span>       
+                                        <span class="arrow">   </span>       
+                                        <span class="type-path"></span>   
+                                    </div>   
+                                    <div class="name-path"></div>   
+                                    <a href="" class="url"></a>   
+                                    <div class="agreements">       
+                                        <div class="agreement-text">unknown</div>   
+                                    </div>     
+                                    <div class="spatial"></div>   
+                                    <div class="small-left"></div>
                                 </div>
-                                <div class="permissions">
-                                    Permissions: 
-                                    <span class="permissions-text">unknown</span>
+                                <div class="meta-object selected" id="collection/ecoregions/wwf/1">   
+                                <div class="object-title">       
+                                    <span class="src-path">World Wildlife Fund (WWF): </span>       
+                                    <span class="arrow">   </span>       
+                                    <span class="type-path">Ecoregion</span>   
+                                </div>   
+                                <div class="name-path">Banda Sea Islands moist deciduous forests</div>   
+                                <a href="" class="url"></a>   
+                                <div class="description">
+                                    here is a description
                                 </div>
                                 <div class="spatial">
-                                    <div class="text">Geography: <span class="spatial-text">unknown</span></div>
-                                    <div class="spacolumn">
-                                        <div class="title">Bounding Box</div>
-                                        <div class="bounding-box">
-                                            <div class="north">90.89023982</div>
-                                            <div class="west">-180.389232</div>
-                                            <div class="east">180.28392</div>
-                                            <div class="south">-90.238023</div>
+                                    <div class="text">Geography: 
+                                        <span class="spatial-text"></span>
+                                    </div>
+                                    <div class="spacolumn">  
+                                        <div class="title">Bounding Box</div>  
+                                        <div class="bounding-box">      
+                                            <div class="north">-5.27165698158</div>      
+                                            <div class="west">127.139602677</div>     
+                                            <div class="east">133.197601577</div>      
+                                            <div class="south">-8.34339466646</div>  
                                         </div>
                                     </div>
-                                    <div class="spacolumn">
-                                        <div class="title">Overview</div>
-                                        <div class="map-overview">
-                                            <img src="http://axh.mol-lab.appspot.com/data/tile?key_name=range/mol/animalia/species/puma_concolor&source=MOL&x=0&y=0&z=0" />
+                                    <div class="spacolumn">  
+                                        <div class="title">Overview</div>  
+                                        <div class="map-overview">  
+                                            <img class="overview-img" src="http://maps.google.com/maps/api/staticmap?zoom=0&amp;center=20,0&amp;size=256x128&amp;sensor=false">
                                         </div>
                                     </div>
-                                </div>
+                                </div>   
                                 <div class="small-left">
-                                    <div class="temporal">
-                                        <div class="title">Temporal span:</div>
-                                        <div class="start">n/a</div>
-                                        <div class="bar"></div>
-                                        <div class="end">n/a</div>
-                                    </div>
                                     <div class="variables">
                                         <div class="title">Other info:</div>
-                                        <div class="variable">
-                                            <div class="name">eco_code:</div>
+                                        <div class="variable">    
+                                            <div class="name">eco_code:</div>    
                                             <div class="value">AA0102</div>
+                                        </div>
+                                        <div class="variable">    
+                                            <div class="name">second:</div>    
+                                            <div class="value">2</div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="file-data">
-                                    <div class="label">Format:</div>
-                                    <div class="format">Esri Shapefile</div>
-                                    <div class="label">Download:</div>
-                                    <a href="" class="location">/ftp/ecoregion/shp/AA0102.shp</a>
-                                    <div class="label">File date:</div>
-                                    <div class="upload-date">2011-06-03 12:35:08.701490</div>
-                                </div>
+                                <div class="small-right">
+                                    <div class="file-data">   
+                                        <div class="title">File info:</div>
+                                        <div class="label">Format:</div>   
+                                        <div class="file-format">Esri Shapefile</div>   
+                                        <div class="label">Download:</div>   
+                                        <a href="" class="file-location">/ftp/ecoregion/shp/AA0102.shp</a>   
+                                        <div class="label">File date:</div>   
+                                        <div class="file-upload-date">2011-06-03 12:35:08.701490</div>
+                                    </div>
+                                </div> 
+                                <div class="agreements">     
+                                    <span class="agreement-text">unknown</span>   
+                                </div>   
+                                <div class="references">   
+                                    <div class="reference-text">Reference one</div>   
+                                    <div class="reference-text">Reference two</div>   
+                                </div>  
                             </div>
                         </div>        
-                </div>    
+                    </div>    
+                </div>
             </div>
-        </div>
     </div>
 </body>
     
