Add prototype UI points search

--- a/points/index.html
+++ b/points/index.html
@@ -8,6 +8,10 @@
           rel="stylesheet" type="text/css" /> 
     <link href="http://fonts.googleapis.com/css?family=Gruppo" rel='stylesheet' type='text/css'> 
     <style> 
+      #names {
+        background: white;
+        margin-top: 6px;
+      }
       #bg {
       font-family: 'Gruppo', serif;
       font-size: 26px;
